# the_book_of_answers_api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: __init__.py  extensions.py
app/data_helper/: __init__.py  init_database.py
app/data_helper/src/: answers.txt
app/models/: answer.py
app/routes/: __init__.py  answer.py
app/schemas/: __init__.py  answer.py
tests/: conftest.py  test_answer.py  test_factory.py
